# Designing-an-Autonomous-Learning-Agent-with-Checkpoint-Verification-and-Feynman-Pedagogy

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
alembic/: env.py
alembic/versions/: 20260502_0001_product_platform.py  20260502_0002_expand_invite_token.py
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/[workspaceId]/: page.tsx
frontend/app/invites/[token]/: page.tsx
frontend/app/learning-sessions/[sessionId]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/reports/[reportId]/: page.tsx
frontend/app/workspaces/: page.tsx
frontend/app/workspaces/[workspaceId]/: page.tsx
frontend/app/workspaces/[workspaceId]/projects/[projectId]/: page.tsx
frontend/components/: app-shell.tsx  auth-provider.tsx  protected-route.tsx
frontend/lib/: api.ts  types.ts
src/deep_research_from_scratch/: copilot_v2.py  deep_research_agent.py  research_agent_full.py  utils.py
src/deep_research_from_scratch/core/: __init__.py  research_graphs.py
src/deep_research_from_scratch/product/: __init__.py  api.py  auth.py  config.py  db.py  exporters.py  knowledge.py  models.py  schemas.py  services.py  worker.py
